// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<WithStyles(ForwardRef(Button))
  className="sample-class"
  classes={
    Object {
      "containedPrimary": "makeStyles-buttonShadow-1",
      "containedSecondary": "makeStyles-buttonShadow-1",
      "disabled": undefined,
      "label": undefined,
      "outlined": "makeStyles-buttonShadow-1",
      "outlinedPrimary": "makeStyles-buttonShadow-1",
      "outlinedSecondary": "makeStyles-buttonShadow-1",
      "root": undefined,
    }
  }
  color="secondary"
  data-qa="button-qa"
  disabled={true}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  variant="outlined"
>
  <div>
    snapshot label
  </div>
</WithStyles(ForwardRef(Button))>
`;

exports[`Snapshot Testing Required Props 1`] = `
<WithStyles(ForwardRef(Button))
  className=""
  classes={
    Object {
      "containedPrimary": "makeStyles-buttonShadow-1",
      "containedSecondary": "makeStyles-buttonShadow-1",
      "disabled": undefined,
      "label": undefined,
      "outlined": "makeStyles-buttonShadow-1",
      "outlinedPrimary": "makeStyles-buttonShadow-1",
      "outlinedSecondary": "makeStyles-buttonShadow-1",
      "root": undefined,
    }
  }
  color="primary"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  variant="contained"
>
  test
</WithStyles(ForwardRef(Button))>
`;

exports[`Snapshot Testing Varying Props 1`] = `
<WithStyles(ForwardRef(Button))
  className=""
  classes={
    Object {
      "containedPrimary": "makeStyles-buttonShadow-1",
      "containedSecondary": "makeStyles-buttonShadow-1",
      "disabled": undefined,
      "label": undefined,
      "outlined": "makeStyles-buttonShadow-1",
      "outlinedPrimary": "makeStyles-buttonShadow-1",
      "outlinedSecondary": "makeStyles-buttonShadow-1",
      "root": undefined,
    }
  }
  color="secondary"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  variant="outlined"
>
  <div>
    snapshot label
  </div>
</WithStyles(ForwardRef(Button))>
`;
